# tg-ingest

./: .gitignore  LICENSE  QUICKSTART_WEB.md  README.md  SIMPLE_GUIDE.md  pyproject.toml  quick1h.sh  quickstart.sh  run.sh  setup.sh  web_server.py
tests/: test_cli.py
tg_export/: clean_export.py  cli.py  quick_export.py
tg_export/templates/: index.html  index.html.backup
